------------------
Pylint's ChangeLog
------------------
What's New in Pylint 2.0?
=========================

    * Exempt `__doc__` from triggering a `redefined-builtin`

      `__doc__` can be used to specify a docstring for a module without
      passing it as a first-statement string.

    * Fix false positive bad-whitespace from function arguments with default
      values and annotations

      Close #1831

    * Fix stop-iteration-return false positive when next builtin has a
      default value in a generator

      Close #1830

    * Fix emission of false positive ``no-member`` message for class with  "private" attributes whose name is mangled.

      Close #1643

    * Fixed a crash which occurred when `Uninferable` wasn't properly handled in `stop-iteration-return`

      Close #1779

    * Use the proper node to get the name for redefined functions (#1792)

      Close #1774

    * Don't crash when encountering bare raises while checking inconsistent returns

      Close #1773

    * Fix a false positive ``inconsistent-return-statements`` message when if statement is inside try/except.

      Close #1770

    * Fix a false positive ``inconsistent-return-statements`` message when while loop are used.

      Close #1772

    * Correct column number for whitespace conventions.

      Previously the column was stuck at 0

      Close #1649

    * Fix ``unused-argument`` false positives with overshadowed variable in
      dictionary comprehension.

      Close #1731

    * Fix false positive ``inconsistent-return-statements`` message when never
      returning functions are used (i.e sys.exit for example).

      Close #1771

    * Fix error when checking if function is exception, as in ``bad-exception-context``.

    * Fix false positive ``inconsistent-return-statements`` message when a
      function is defined under an if statement.

      Close #1794

    * New ``useless-return`` message when function or method ends with a "return" or