@@ -4,6 +4,10 @@ Pylint's ChangeLog
 What's New in Pylint 2.0?
 =========================
 
+    * Add a check `consider-swap-variables` for swapping variables with tuple unpacking
+
+      Close #1922
+
     * Exempt `__doc__` from triggering a `redefined-builtin`
 
       `__doc__` can be used to specify a docstring for a module without
